--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
             <p>Designer</p>
           </div>
           <div class="team_item">
-            <img src="images/team3.jpg" alt="Team Member">
-            <h4>Marco Morello</h4>
-            <p>Designer/Developer</p>
+            <img src="images/team4.jpg" alt="Team Member">
+            <h4>Cristina Bordeianu</h4>
+            <p>Developer/Designer</p>
           </div>
         </div>
       </div>
